button docs WIP

--- a/packages/docs/src/pages/Button.mdx
+++ b/packages/docs/src/pages/Button.mdx
@@ -1,8 +1,34 @@
 import { Button } from 'swarm-components'
 
-# Button V2
-
+# Button
+This is a button for swarm 2
+```.jsx
 <Button>Click</Button>
+```
+```.jsx
+<Button primary>Click</Button>
+```
+```.jsx
+<Button neutral>Click</Button>
+```
+```.jsx
+<Button bordered>Click</Button>
+```
+```.jsx
+<Button disabled>Click</Button>
+```
 
+<Button bordered>Click</Button>
+
+# Inverted
+<div style={{backgroundColor: 'black'}}>
+    <Button inverted>Inverted</Button>
+</div>
+<div style={{backgroundColor: 'green'}}>
+    <Button inverted>Inverted</Button>
+</div>
+
+# Button V2
+<Button primary>Hello</Button>
 # Button V1
-<button className="button">old</button>
+<button class="button button-primary">old</button>
