Updating docs to support swarm-icons + updating docs to use html-loader to inline svg snippet to inject icon sprite + added html loader to process .inc filetype

--- a/packages/docs/src/pages/Button.mdx
+++ b/packages/docs/src/pages/Button.mdx
@@ -1,4 +1,5 @@
 import { Button } from 'swarm-components'
+import { Icon } from 'swarm-components'
 
 # Button
 This is a button for swarm 2
@@ -29,6 +30,10 @@ This is a button for swarm 2
 </div>
 
 # Button V2
-<Button primary>Hello</Button>
+<Button primary icon='arrow-right'>Hello</Button>
+
+# Icon
+<Icon shape="arrow-right" />
+
 # Button V1
 <button class="button button-primary">old</button>
