docs as dev env

--- a/packages/docs/src/pages/Button.mdx
+++ b/packages/docs/src/pages/Button.mdx
@@ -30,7 +30,9 @@ This is a button for swarm 2
 </div>
 
 # Button V2
+<Button primary icon='arrow-right' right>Hello</Button>
 <Button primary icon='arrow-right'>Hello</Button>
+<Button primary icon='arrow-right' />
 
 # Icon
 <Icon shape="arrow-right" />
