--- a/packages/docs/src/pages/Typography.mdx
+++ b/packages/docs/src/pages/Typography.mdx
@@ -1,2 +1,14 @@
 # Typography
 
+```.jsx
+<>
+<h1 className="text--display">Display Text</h1>
+<h2 className="text--pageTitle">Page Title</h2>
+<h3 className="text--big">Large Text</h3>
+<h3 className="text--sectionTitle">Section Title</h3>
+<h3 className="text--kickerText">Kicker Text</h3>
+<a className="text--link" href="#">Link Text</a>
+<p className="text--tiny">Tiny Text</p>
+<p className="text--body">Body text</p>
+</>
+```
