removing test props, cleanin up prop type defs

--- a/packages/swarm-docs/src/pages/Inputs.mdx
+++ b/packages/swarm-docs/src/pages/Inputs.mdx
@@ -2,5 +2,7 @@ import { TextInput } from '@meetup/swarm-components'
 
 # Inputs
 ```.jsx
-<TextInput value="phife dawg" />
+<TextInput value="phife dawg two" />
 ```
+
+# Select 
