--- a/packages/swarm-docs/src/pages/Select.mdx
+++ b/packages/swarm-docs/src/pages/Select.mdx
@@ -4,28 +4,34 @@ import SelectExample from '../components/selectExample';
 # Select
 
 ```.jsx
-<Select
-    value="A"
-    label="Swarm Select"
-    id="swarm-select"
-    name="swarm-select"
-    onChange={(e) => alert(e.target.value)}
->
-    <option value="A">
-        A
-    </option>
-    <option value="B">
-        B
-    </option>
-    <option value="C">
-        C
-    </option>
-    <option value="D">
-        D
-    </option>
-</Select>
+<div style={{width: 200}}>
+    <Select
+        value="A"
+        label="Swarm Select"
+        id="swarm-select"
+        name="swarm-select"
+        onChange={(e) => alert(e.target.value)}
+    >
+        <option value="A">
+            A
+        </option>
+        <option value="B">
+            B
+        </option>
+        <option value="C">
+            C
+        </option>
+        <option value="D">
+            D
+        </option>
+    </Select>
+</div>
 ```
+<br/>
+<br/>
 
 ## Example
+
+<br/>
 
 <SelectExample />
