feat: adding retoggle library and demo on buttons

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -1,5 +1,6 @@
 import { Button } from '@meetup/swarm-components'
 import { Icon } from '@meetup/swarm-components'
+import Example from '../components/buttonExample';
 
 # Button
 This is a button for swarm 2
@@ -39,3 +40,7 @@ This is a button for swarm 2
 
 # Button V1
 <button class="button button-primary">old</button>
+
+# Interactive
+
+<Example />
