fix: adding swarm styles to markdown nodes

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -22,7 +22,7 @@ This is a button for swarm 2
 
 <Button bordered>Click</Button>
 
-# Inverted
+## Inverted
 <div style={{backgroundColor: 'black'}}>
     <Button inverted>Inverted</Button>
 </div>
@@ -30,17 +30,16 @@ This is a button for swarm 2
     <Button inverted>Inverted</Button>
 </div>
 
-# Button V2
+## Button V2
 <Button primary icon='arrow-right' right>Hello</Button>
 <Button primary icon='arrow-right'>Hello</Button>
-<Button primary icon='arrow-right' />
 
-# Icon
+## Icon
 <Icon shape="arrow-right" />
 
-# Button V1
+## Button V1
 <button class="button button-primary">old</button>
 
-# Interactive
+## Interactive
 
 <Example />
