fix: adding react-docgen to support docgen info on components. Commenting Button props

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -1,9 +1,15 @@
 import { Button } from '@meetup/swarm-components'
 import { Icon } from '@meetup/swarm-components'
 import Example from '../components/buttonExample';
+import PropsTable from '../components/propstable';
 
 # Button
-This is a button for swarm 2
+Buttons are the primary way to interact with content.
+
+## Example
+<Example />
+
+## Snippets
 ```.jsx
 <Button>Click</Button>
 ```
@@ -20,26 +26,12 @@ This is a button for swarm 2
 <Button disabled>Click</Button>
 ```
 
-<Button bordered>Click</Button>
+## Props
+<PropsTable propMetaData={Button.__docgenInfo} />
 
-## Inverted
-<div style={{backgroundColor: 'black'}}>
-    <Button inverted>Inverted</Button>
-</div>
-<div style={{backgroundColor: 'green'}}>
-    <Button inverted>Inverted</Button>
-</div>
 
-## Button V2
-<Button primary icon='arrow-right' right>Hello</Button>
-<Button primary icon='arrow-right'>Hello</Button>
+## a11y
 
-## Icon
-<Icon shape="arrow-right" />
+Keyboard interactions: The button action should be triggered by the enter and space keys.
 
-## Button V1
-<button class="button button-primary">old</button>
 
-## Interactive
-
-<Example />
