removed logs, consolidated snippets

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -11,23 +11,17 @@ Buttons are the primary way to interact with content.
 
 ## Snippets
 ```.jsx
+<>
 <Button>Click</Button>
-```
-```.jsx
 <Button primary>Click</Button>
-```
-```.jsx
 <Button neutral>Click</Button>
-```
-```.jsx
 <Button bordered>Click</Button>
-```
-```.jsx
 <Button disabled>Click</Button>
+</>
 ```
 
 ## Props
-<PropsTable propMetaData={Button.__docgenInfo} />
+<PropsTable propMetaData={Button.__docgenInfo || { props: {} }} />
 
 
 ## a11y
