--- a/packages/swarm-docs/src/pages/Checkbox.mdx
+++ b/packages/swarm-docs/src/pages/Checkbox.mdx
@@ -3,9 +3,16 @@ import Example from '../components/checkboxExample'
 
 # Checkbox
 
+# Snippets
 ```.jsx
+<>
 <Checkbox label="swarm" checked={1 == 1} />
+<Checkbox label="swarm" checked={1 == 1} />
+</>
 ```
+
+#Props
+
 
 <Checkbox label="swarm" checked={1 == 1} />
 
