feat: doc page for Toggle and TogglePill

--- a/packages/swarm-docs/src/pages/Toggles.mdx
+++ b/packages/swarm-docs/src/pages/Toggles.mdx
@@ -1,22 +1,44 @@
-import { TogglePill, Toggle } from '@meetup/swarm-components'
-import Example from '../components/toggleExample'
+import { TogglePill, Toggle } from '@meetup/swarm-components';
+import PillExample from '../components/togglePillExample';
+import SwitchExample from '../components/toggleExample';
+import PropsTable from '../components/propstable';
 
 # TogglePill 
+Toggle pills are used to indicate whether an option has been selected
 
+<PillExample />
+
+## Snippets
 ```.jsx
 <>
 <TogglePill label="swarm" checked={1 == 1} name="test-1" />
-<TogglePill checked={1 == 1} name="test-1">Swarm Toggle</TogglePill>
+<TogglePill checked={1 == 0} name="test-1">Swarm Toggle</TogglePill>
 </>
 ```
 
-<Example />
+## Props
+<PropsTable propMetaData={TogglePill.__docgenInfo} />
+
+## a11y
+Pass `aria-label` to provide a more specific label to be used with screen readers.  Toggle Pills should support keyboad interaction with both `space` and `enter` keys.
+
+
 
 # Toggle Switch
+Toggle switches are used to indicate whether something is on or off.
 
+<SwitchExample />
+
+## Snippets
 ```.jsx
 <>
 <Toggle checked={1 == 1} name="test-1"/>
 <Toggle checked={1 == 0} name="test-1"/>
 </>
 ```
+
+## Props
+<PropsTable propMetaData={Toggle.__docgenInfo} />
+
+## a11y
+Remember to associate the label to the Toggle. Toggles should support keyboad interaction with both `space` and `enter` keys.
