fix: update Radio doc page with required sections

--- a/packages/swarm-docs/src/pages/Radio.mdx
+++ b/packages/swarm-docs/src/pages/Radio.mdx
@@ -1,12 +1,47 @@
-import { Radio } from '@meetup/swarm-components'
-import Example from '../components/radioExample'
+import { Radio } from '@meetup/swarm-components';
+import Example from '../components/radioExample';
+import PropsTable from '../components/propstable';
 
-# Radio
+## Radio
+---
+A wrapper for an html `<input type="radio">`.
+
+<br/>
+<br/>
+
+### Snippet
+---
+
+Use this interactive snippet to try the component:
+<br/>
 
 ```.jsx
 <Radio label="swarm" checked={1 == 1} />
 ```
 
-<Radio label="swarm" checked={1 == 0} />
+<br/>
+<br/>
+
+### Props
+---
+<br/>
+<PropsTable propMetaData={Radio.__docgenInfo} />
+
+<br/>
+<br/>
+
+### a11y
+---
+<br/>
+
+Keyboard interactions: **n/a**
+
+<br/>
+<br/>
+
+### Examples
+---
+<br/>
 
 <Example />
+
