fix: add a11y to radio docs

--- a/packages/swarm-docs/src/pages/Radio.mdx
+++ b/packages/swarm-docs/src/pages/Radio.mdx
@@ -34,7 +34,13 @@ Use this interactive snippet to try the component:
 ---
 <br/>
 
-Keyboard interactions: **n/a**
+Radio buttons should be used when only one option from a group can be selected.
+
+<br/>
+
+**Keyboard interactions:**
+* **↑/↓** or **←/→**    ... to select an option.
+* **Tab**               ... to move to the next element.
 
 <br/>
 <br/>
