fix: radio group example

--- a/packages/swarm-docs/src/pages/Radio.mdx
+++ b/packages/swarm-docs/src/pages/Radio.mdx
@@ -1,5 +1,5 @@
 import { Radio } from '@meetup/swarm-components';
-import Example from '../components/radioExample';
+import Example, { GroupRadioButtonsExample } from '../components/radioExample';
 import PropsTable from '../components/propstable';
 
 ## Radio
@@ -49,5 +49,14 @@ Radio buttons should be used when only one option from a group can be selected.
 ---
 <br/>
 
+**These are examples of single (not-grouped) Radio buttons:**
+<br/>
+
 <Example />
 
+<br/>
+
+**This is an example of grouped radio buttons and how to manage state:**
+<br/>
+
+<GroupRadioButtonsExample />
