--- a/packages/swarm-docs/src/pages/Radio.mdx
+++ b/packages/swarm-docs/src/pages/Radio.mdx
@@ -16,7 +16,7 @@ Use this interactive snippet to try the component:
 <br/>
 
 ```.jsx
-<Radio name="swarm" label="swarm" value="1" checked={1 == 1} />
+<Radio name="swarm" label="swarm" value="1" checked={true} onChange={(e) => alert(e.target.value)} />
 ```
 
 <br/>
