images/gatsby-icon.png
feat: updated favicon

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -50,7 +50,7 @@ All button styles and sizes share the same anatomy.
 
 ** Disabled **
 
-<div class="temp-image"></div>
+<img src="/static/docs-images/button-disabled-states.png" width="250" height="132" />
 
 
 
