added a 2 column grid template and updated the anatomy section of the button docs page using this grid template

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -25,6 +25,25 @@ Buttons are the primary way to interact with content.
 ## Anatomy
 All button styles and sizes share the same anatomy.
 <img src="/static/docs-images/button-anatomy.png" width="810" height="252" />
+<br/>
+<div class="grid-2-col">
+    <div class="column">
+        <p class="text--body"><strong>Label</strong></p>
+        <p class="text--body">Button labels should be short and actionable. Label attributes are driven by button style and size.</p>
+    </div>
+    <div class="column">
+        <p class="text--body"><strong>Border</strong></p>
+        <p class="text--body">All buttons have solid 1px borders, though some styles require the same color for background and border, hiding the presence of the border.</p>
+    </div>
+    <div class="column">
+        <p class="text--body"><strong>Background</strong></p>
+        <p class="text--body">Button style determines its background color and opacity.</p>
+    </div>
+    <div class="column">
+        <p class="text--body"><strong>Radius</strong></p>
+        <p class="text--body">All buttons in all sizes and viewports have an 8px border radius.</p>
+    </div>
+</div>
 
 ## Styles
 
