line height and color added

--- a/packages/swarm-docs/src/pages/Radio.mdx
+++ b/packages/swarm-docs/src/pages/Radio.mdx
@@ -1,4 +1,4 @@
-import { Radio } from '@meetup/swarm-components';
+import { Radio, FieldLabel } from '@meetup/swarm-components';
 import Example, { GroupRadioButtonsExample } from '../components/radioExample';
 import PropsTable from '../components/propstable';
 
