fix: update textInput swarm docs to provide both a label tag and an id prop

--- a/packages/swarm-docs/src/pages/TextInput.mdx
+++ b/packages/swarm-docs/src/pages/TextInput.mdx
@@ -16,7 +16,7 @@ Use this interactive snippet to try the component:
 <br/>
 
 ```.jsx
-<TextInput value="phife dawg two" />
+<TextInput id="input" value="phife dawg two" />
 ```
 
 <br/>
@@ -35,6 +35,9 @@ Use this interactive snippet to try the component:
 <br/>
 
 Keyboard interactions: **n/a**
+
+<br/>
+Must supply a <b>label</b> html tag with an <b>`htmlFor`</b> React attribute that equals the value of the textInput's <b>id</b>.
 
 <br/>
 <br/>
