fix: correcting NumericalInput, calling value directly in onChange

--- a/packages/swarm-docs/src/pages/NumericalInput.mdx
+++ b/packages/swarm-docs/src/pages/NumericalInput.mdx
@@ -1,7 +1,12 @@
 import { NumericalInput } from '@meetup/swarm-components';
+import Example from '../components/numericalExample';
 
 # Numerical Input
-
-<NumericalInput />
+```.jsx
+<NumericalInput value={1} />
+```
 
 <NumericalInput onIncrament={() => alert('incrament')} />
+
+## example
+<Example />
