fix: inverted color class
+ removed colors from text--* definitions
+ inverted class applies color--white

--- a/packages/swarm-docs/src/pages/Typography.mdx
+++ b/packages/swarm-docs/src/pages/Typography.mdx
@@ -10,5 +10,15 @@
 <a className="text--link" href="#">Link Text</a>
 <p className="text--tiny">Tiny Text</p>
 <p className="text--body">Body text</p>
+<div className="inverted" style={{ backgroundColor: 'black' }}>
+    <h1 className="text--display">Display Text</h1>
+    <h2 className="text--pageTitle">Page Title</h2>
+    <h3 className="text--big">Large Text</h3>
+    <h3 className="text--sectionTitle">Section Title</h3>
+    <h3 className="text--kickerText">Kicker Text</h3>
+    <a className="text--link" href="#">Link Text</a>
+    <p className="text--tiny">Tiny Text</p>
+    <p className="text--body">Body text</p>
+</div>
 </>
 ```
