fix: added autosize support to textarea

--- a/packages/swarm-docs/src/pages/Textarea.mdx
+++ b/packages/swarm-docs/src/pages/Textarea.mdx
@@ -1,5 +1,6 @@
 import { Textarea } from '@meetup/swarm-components'
 import { Icon } from '@meetup/swarm-components'
+import Example from '../components/textareaExample';
 
 # Textarea
 
@@ -10,3 +11,6 @@ import { Icon } from '@meetup/swarm-components'
 ```.jsx
 <Textarea value='textarea component for v2' />
 ```
+
+## Example
+<Example />
