fix: character count and propstable added

--- a/packages/swarm-docs/src/pages/Textarea.mdx
+++ b/packages/swarm-docs/src/pages/Textarea.mdx
@@ -1,6 +1,7 @@
 import { Textarea } from '@meetup/swarm-components'
 import { Icon } from '@meetup/swarm-components'
 import Example from '../components/textareaExample';
+import PropsTable from '../components/propstable';
 
 # Textarea
 
@@ -14,3 +15,9 @@ import Example from '../components/textareaExample';
 
 ## Example
 <Example />
+
+
+### Props
+---
+<br/>
+<PropsTable propMetaData={Textarea.__docgenInfo} />
