fix: removing hooks from textarea due to issues integrating into mup-web

--- a/packages/swarm-docs/src/pages/Textarea.mdx
+++ b/packages/swarm-docs/src/pages/Textarea.mdx
@@ -6,11 +6,11 @@ import PropsTable from '../components/propstable';
 # Textarea
 
 ```.jsx
-<Textarea placeholder='textarea component for v2' />
+<Textarea placeholder='textarea component for v2' onChange={() => null} />
 ```
 
 ```.jsx
-<Textarea value='textarea component for v2' />
+<Textarea value='textarea component for v2' onChange={() => null}/>
 ```
 
 ## Example
