fix: button icon styles on hover. remove fill on icon

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -21,7 +21,11 @@ All available props for `Buton` include:
 Try using `Button` with this interactive code snippet. Update a prop and see what happens!
 
 ```.jsx
-<Button>Click</Button>
+<>
+  <Button>Click</Button>
+  <br />
+  <Button icon="bolt">Click</Button>
+</>
 ```
 
 ## Anatomy
