copy class modifier

--- a/packages/swarm-docs/src/pages/Button.mdx
+++ b/packages/swarm-docs/src/pages/Button.mdx
@@ -13,7 +13,7 @@ The following are all the available states for a `Button`:
 <Example /><br/>
 
 ## Props
-All available props for `Buton` include:
+All available props for `Button` include:
 <br/>
 <PropsTable propMetaData={Button.__docgenInfo} />
 
