--- a/packages/swarm-docs/src/pages/Colors.mdx
+++ b/packages/swarm-docs/src/pages/Colors.mdx
@@ -2,5 +2,7 @@ import Swatches from '../components/swatches';
 
 
 # Colors
-
+---
+Click a color swatch to copy the modifier class.
 <Swatches />
+
