fix: not modifier class

--- a/packages/swarm-docs/src/pages/Colors.mdx
+++ b/packages/swarm-docs/src/pages/Colors.mdx
@@ -3,6 +3,6 @@ import Swatches from '../components/swatches';
 
 # Colors
 ---
-Click a color swatch to copy the modifier class.
+Click a color swatch to copy the css variable.
 <Swatches />
 
