feat: navigation with relative directory

--- a/packages/swarm-docs/src/pages/Atoms/Button.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/Button.mdx
@@ -1,7 +1,7 @@
 import { Button } from '@meetup/swarm-components'
 import { Icon } from '@meetup/swarm-components'
-import Example from '../components/examples/button';
-import PropsTable from '../components/propstable';
+import Example from '../../components/examples/button';
+import PropsTable from '../../components/propstable';
 
 # Button
 ---
