--- a/packages/swarm-docs/src/pages/Atoms/Select.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/Select.mdx
@@ -1,6 +1,6 @@
 import { Select, FieldLabel } from  '@meetup/swarm-components';
-import SelectExample from '../components/examples/select';
-import PropsTable from '../components/propstable';
+import SelectExample from '../../components/examples/select';
+import PropsTable from '../../components/propstable';
 
 ## Select
 ---
