--- a/packages/swarm-docs/src/pages/Atoms/TextInput.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/TextInput.mdx
@@ -1,6 +1,6 @@
 import { TextInput } from '@meetup/swarm-components';
-import Example from '../components/examples/textInput';
-import PropsTable from '../components/propstable';
+import Example from '../../components/examples/textInput';
+import PropsTable from '../../components/propstable';
 
 ## TextInput
 ---
