--- a/packages/swarm-docs/src/pages/Atoms/Textarea.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/Textarea.mdx
@@ -1,7 +1,7 @@
 import { Textarea } from '@meetup/swarm-components'
 import { Icon } from '@meetup/swarm-components'
-import Example from '../components/examples/textarea';
-import PropsTable from '../components/propstable';
+import Example from '../../components/examples/textarea';
+import PropsTable from '../../components/propstable';
 
 # Textarea
 
