--- a/packages/swarm-docs/src/pages/Atoms/LinkButton.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/LinkButton.mdx
@@ -1,7 +1,7 @@
 import { LinkButton } from '@meetup/swarm-components';
 import { Icon } from '@meetup/swarm-components';
-import Example from '../components/examples/linkButton';
-import PropsTable from '../components/propstable';
+import Example from '../../components/examples/linkButton';
+import PropsTable from '../../components/propstable';
 
 ## LinkButton
 ---
