fix: blur when item is no longer active

--- a/packages/swarm-docs/src/pages/Dropdown.mdx
+++ b/packages/swarm-docs/src/pages/Dropdown.mdx
@@ -1,4 +1,5 @@
 import { Menu, MenuList, MenuButton, MenuItem, MenuLink } from '@meetup/swarm-components';
+import PropsTable from '../components/propstable';
 import Example from '../components/examples/dropdown';
 
 # Dropdown
