fix: updated and added MenuLink to demo

--- a/packages/swarm-docs/src/pages/Dropdown.mdx
+++ b/packages/swarm-docs/src/pages/Dropdown.mdx
@@ -17,6 +17,10 @@ Example
     <MenuItem onSelect={() => alert("Download")}>Download</MenuItem>
     <MenuItem onSelect={() => alert("Copy")}>Create a Copy</MenuItem>
     <MenuItem onSelect={() => alert("Mark as Draft")}>Mark as Draft</MenuItem>
+    <MenuLink
+      as="a"
+      href="https://meetup.com"
+    >Meetup</MenuLink>
     <MenuItem onSelect={() => alert("Delete")}>Delete</MenuItem>
   </MenuList>
 </Menu>
