--- a/packages/swarm-docs/src/pages/Organisms/Dropdown.mdx
+++ b/packages/swarm-docs/src/pages/Organisms/Dropdown.mdx
@@ -1,6 +1,6 @@
 import { Menu, MenuList, MenuButton, MenuItem, MenuLink } from '@meetup/swarm-components';
-import PropsTable from '../components/propstable';
-import Example from '../components/examples/dropdown';
+import PropsTable from '../../components/propstable';
+import Example from '../../components/examples/dropdown';
 
 # Dropdown
 
