docs: adding home, cleaning up others to match

--- a/packages/swarm-docs/src/pages/Atoms/LinkButton.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/LinkButton.mdx
@@ -3,7 +3,7 @@ import { Icon } from '@meetup/swarm-components';
 import Example from '../../components/examples/linkButton';
 import PropsTable from '../../components/propstable';
 
-## LinkButton
+# LinkButton
 ---
 An html anchor tag styled as a button.
 
