--- a/packages/swarm-docs/src/pages/Atoms/Radio.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/Radio.mdx
@@ -2,7 +2,7 @@ import { Radio } from '@meetup/swarm-components';
 import Example, { GroupRadioButtonsExample } from '../../components/examples/radio';
 import PropsTable from '../../components/propstable';
 
-## Radio
+# Radio
 ---
 A wrapper for an html `<input type="radio">`.
 
