--- a/packages/swarm-docs/src/pages/Atoms/Select.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/Select.mdx
@@ -2,7 +2,7 @@ import { Select, FieldLabel } from  '@meetup/swarm-components';
 import SelectExample from '../../components/examples/select';
 import PropsTable from '../../components/propstable';
 
-## Select
+# Select
 ---
 A wrapper for an html `<select>` element with an optional `<label>` tag and helper text.
 
