--- a/packages/swarm-docs/src/pages/Atoms/TextInput.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/TextInput.mdx
@@ -2,7 +2,7 @@ import { TextInput } from '@meetup/swarm-components';
 import Example from '../../components/examples/textInput';
 import PropsTable from '../../components/propstable';
 
-## TextInput
+# TextInput
 ---
 A wrapper for an html `<input>` element with an optional `<label>` tag.
 
