--- a/packages/swarm-docs/src/pages/Organisms/Dropdown.mdx
+++ b/packages/swarm-docs/src/pages/Organisms/Dropdown.mdx
@@ -3,6 +3,18 @@ import PropsTable from '../../components/propstable';
 import Example from '../../components/examples/dropdown';
 
 # Dropdown
+---
+An accessible set of components used to compose our dropdown menus.
+
+```jsx
+import { 
+  Menu,
+  MenuList,
+  MenuButton,
+  MenuItem,
+  MenuLink
+  } from '@meetup/swarm-components';
+```
 
 <Example />
 
