--- a/packages/swarm-docs/src/pages/Foundations/Typography.mdx
+++ b/packages/swarm-docs/src/pages/Foundations/Typography.mdx
@@ -1,4 +1,10 @@
 # Typography
+---
+All of the metrics in Swarm Design System are based in our typography and our typographic scale. 
+Text is the most common way information is displayed in Meetup’s products, so we’ve developed 
+a polished typographic system that provides hierarchy and ensures our content is always readable.
+<br />
+<br />
 
 ```.jsx
 <>
