feat: added svg wrapper to hold 32px height for large iconOnly buttons

--- a/packages/swarm-docs/src/pages/Atoms/Button.mdx
+++ b/packages/swarm-docs/src/pages/Atoms/Button.mdx
@@ -24,7 +24,7 @@ Try using `Button` with this interactive code snippet. Update a prop and see wha
 <>
   <Button>Click</Button>
   <br />
-  <Button icon="plus">Click</Button>
+  <Button icon="send">Click</Button>
 </>
 ```
 
