feat: toaster styles, and behavior updates

--- a/packages/swarm-docs/src/pages/Organisms/Toast.mdx
+++ b/packages/swarm-docs/src/pages/Organisms/Toast.mdx
@@ -3,8 +3,8 @@ import Example from '../../components/examples/toast';
 
 # Toast
 ```.jsx
-<Toast id="test">
-  Test
+<Toast status="warning" id="test">
+  <p>Test</p>
 </Toast>
 ```
 
