--- a/packages/swarm-docs/src/pages/Foundations/Spacing.mdx
+++ b/packages/swarm-docs/src/pages/Foundations/Spacing.mdx
@@ -1,39 +1,99 @@
 # Spacing
 
 <br/>
-Swarm uses both a 4-base and 5-base grid scale depending on viewport size. This relative size relationship helps maintain balance and visual harmony for the right screen. It also allows for engineers to produce less viewport specific code.
+Swarm uses a 4-base grid scale. The grig provides values in intervals of 4 with a base space being defined as 16.
 <br />
 
 <table className="props-table">
     <tr>
         <th>Size Variable</th>
-        <th>Small: 320px - 639px</th>
-        <th>Large: 640px+</th>
+        <th>Size (px)</th>
+        <th>CSS Variable</th>
     </tr>
     <tr>
-        <td className="text-code">Quarter</td>
+        <td className="text-code">0</td>
         <td>4px</td>
-        <td>5px</td>
+        <td>--space-0</td>
     </tr>
     <tr>
-        <td className="text-code">Half</td>
+        <td className="text-code">1</td>
+        <td>4px</td>
+        <td>--space-1</td>
+    </tr>
+    <tr>
+        <td className="text-code">2</td>
         <td>8px</td>
-        <td>10px</td>
+        <td>--space-2</td>
     </tr>
     <tr>
-        <td className="text-code">Space</td>
+        <td className="text-code">3</td>
+        <td>12px</td>
+        <td>--space-3</td>
+    </tr>
+    <tr>
+        <td className="text-code">4</td>
         <td>16px</td>
+        <td>--space-4</td>
+    </tr>
+    <tr>
+        <td className="text-code">5</td>
         <td>20px</td>
+        <td>--space-5</td>
     </tr>
     <tr>
-        <td className="text-code">Double</td>
+        <td className="text-code">6</td>
+        <td>24px</td>
+        <td>--space-6</td>
+    </tr>
+    <tr>
+        <td className="text-code">7</td>
+        <td>28px</td>
+        <td>--space-7</td>
+    </tr>
+    <tr>
+        <td className="text-code">8</td>
         <td>32px</td>
-        <td>40px</td>
+        <td>--space-8</td>
     </tr>
     <tr>
-        <td className="text-code">Triple</td>
+        <td className="text-code">9</td>
+        <td>36px</td>
+        <td>--space-9</td>
+    </tr>
+    <tr>
+        <td className="text-code">10</td>
         <td>40px</td>
+        <td>--space-10</td>
+    </tr>
+    <tr>
+        <td className="text-code">11</td>
+        <td>44px</td>
+        <td>--space-11</td>
+    </tr>
+    <tr>
+        <td className="text-code">12</td>
+        <td>48px</td>
+        <td>--space-12</td>
+    </tr>
+    <tr>
+        <td className="text-code">13</td>
+        <td>52px</td>
+        <td>--space-13</td>
+    </tr>
+    <tr>
+        <td className="text-code">14</td>
+        <td>56px</td>
+        <td>--space-10</td>
+    </tr>
+    <tr>
+        <td className="text-code">15</td>
         <td>60px</td>
+        <td>--space-15</td>
+    </tr>
+    <tr>
+        <td className="text-code">16</td>
+        <td>64px</td>
+        <td>--space-16</td>
     </tr>
 </table>
 
@@ -48,12 +108,4 @@ Swarm uses both a 4-base and 5-base grid scale depending on viewport size. This 
 Swarm spacing is built into all atoms of the design system, like Buttons and Text Inputs. To assemble layouts, spacing tokens can be applied to all four edges of a DOM element, using margin and padding properties.
 
 <br />
-<br />
-
-
-### Examples
-<br />
-
-<img src="/docs-images/spacing-example-event-card.png" width="810" height="744" />
-
 <br />
